# triton

./: .gitignore  README.md  config.rb  engine.py  hello.py  index.html  main.js  package-lock.json  package.json  pyproject.toml  run-all.bat  run-dash.bat  run.vbs
assets/js/: menu.js
assets/sass/components/: _section.scss
assets/sass/layout/: _intro.scss
ichor/: Amphitrite2017-DegQ.py  README  README.md  amphitrite.py  setup.py
ichor/data/: degQMSMS-chargeStripped.txt
ichor/ichorlib/: __init__.py
ichor/ichorlib/genClasses/: FileManipulations.py  IsotopeCalculator.py  MassCalculator.py  Matcher.py  Modification.py  Modifications.py  PeakPicking.py  Scorer.py  colorPalette.py  detect_peaks.py  parser.py
ichor/ichorlib/imClasses/: Calibration_KT.py  IMSpectrum.py
ichor/ichorlib/msClasses/: MassSpectrum.py  MsCSD.py  MsCSD_back.py  MsPeak.py  MsUtils.py
ichor/ichorlib/params/: modifications.json
ichor/ichorlib/seqClasses/: Fragment.py  Fragmentor.py  MatchedFragment.py  Matcher.py  OligoFragment.py  plotTricks.py  (+2 more)
ichor/imClasses/: Calibration.py
ichor/notebooks/: Amphitrite2017-DegQ.ipynb
ichor/tests/: 1-DegQnoLysozyme.txt  degQMSMS-chargeStripped.txt  file_conversion_for_Benthy.py  livePlotTest.py  native_ms_exam_question.py  optimise_native_MS.py  peak_picking_methods.py  predictIsotopes.py  readIMfiles.py  receiveData.py  sendData.py  testIsotope.py  test_file_conversion.py  test_fragmentation.py  test_fragmentation_2.py  test_oligo_scoring.py  test_peptide_fragmentation.py
sections/: getintouch.html  welcome.html  whatwedo.html  whoweare.html
(+4 files in other folders)
