[tool.poetry]
name = "triton"
version = "0.1.0"
description = "A service-oriented cross-platform mass spectrometry suite with distributed front-end."
authors = ["Ioannis Valasakis <code@wizofe.uk>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
scipy = "^1.3"
matplotlib = "^3.1"
dash = "^1.1"
dash_bootstrap_components = "^0.7.0"
chart_studio = "^1.0"
pandas = "^0.25.0"
peakutils = "^1.3"
Flask-Caching = "^1.7"
pathlib = "^1.0"
redis = "^3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
